--- a/Module1/assignment1.10/html1.10.html
+++ b/Module1/assignment1.10/html1.10.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>results</title>
+    <title>Dice Probability Calculator</title>
 </head>
 <body>
-    <h1>results</h1>
-    <div id="results"></div>
+    <h1>Dice Probability Calculator</h1>
+    <label for="numDice">Enter the number of dice:</label>
+    <input type="number" id="numDice">
+    <br>
+    <label for="sum">Enter the sum of eye numbers:</label>
+    <input type="number" id="sum">
+    <br>
+    <button onclick="calculateProbability()">Calculate Probability</button>
+    <div id="result"></div>
     <script src="js1.10.js"></script>
 </body>
 </html>
