--- a/Module1/assignment1.9/html1.9.html
+++ b/Module1/assignment1.9/html1.9.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>results</title>
+    <title>Prime Number Checker</title>
 </head>
 <body>
-    <h1>results</h1>
-    <div id="results"></div>
+    <h1>Prime Number Checker</h1>
+    <label for="number">Enter an integer:</label>
+    <input type="text" id="number">
+    <button onclick="checkPrime()">Check Prime</button>
+    <div id="result"></div>
     <script src="js1.9.js"></script>
 </body>
 </html>
