fixing errors , added 2.2 - 2.7

--- a/Module2/assignment2.1/html2.1.html
+++ b/Module2/assignment2.1/html2.1.html
@@ -18,5 +18,5 @@
     <input type="number" id="num5"><br>
     <button onclick="printReverseOrder()">Print Reverse Order</button>
     <script src="js2.1.js"></script>
-<body/>
-<html/>
+</body>
+</html>
