--- a/Module2/assignment2.2/html2.2.html
+++ b/Module2/assignment2.2/html2.2.html
@@ -11,5 +11,5 @@
     <button onclick="getParticipantNames()">Submit</button>
     <div id="participantList"></div>
     <script src="js2.2.js"></script>
-<body/>
-<html/>
+</body>
+</html>
