--- a/Module2/assignment2.3/html2.3.html
+++ b/Module2/assignment2.3/html2.3.html
@@ -9,5 +9,5 @@
     <button onclick="getDogNames()">Enter Dog Names</button>
     <div id="dogList"></div>
     <script src="js2.3.js"></script>
-<body/>
-<html/>
+</body>
+</html>
