--- a/Module1/assignment1.2/html1.2.html
+++ b/Module1/assignment1.2/html1.2.html
@@ -5,11 +5,6 @@
     <title>assigment1</title>
 </head>
 <body>
-    <script>
-        'use strict';
-        var name = window.prompt("Enter your name:");
-        console.log('Hello, ' + name);
-
-    </script>
+      <script src="js1.2.js">;</script>
 </body>
 </html>
