errors are fixed 1.1 - 1.10

--- a/Module1/assignment1.1/html1.1.html
+++ b/Module1/assignment1.1/html1.1.html
@@ -2,14 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>assigment1</title>
+    <title>assigment1.1</title>
 </head>
 <body>
-    <script>
-        'use strict';
-
-        console.log('I\'m printing to console!');
-
-    </script>
+    <script src="js1.1.js"></script>
 </body>
 </html>
