--- a/Module1/assignment1.3/html1.3.html
+++ b/Module1/assignment1.3/html1.3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>results</title>
+    <title>assigment1.3</title>
 </head>
 <body>
     <h1>results</h1>
