--- a/Module1/assignment1.2/html1.2.html
+++ b/Module1/assignment1.2/html1.2.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>assigment1</title>
+    <title>assigment1.2</title>
 </head>
 <body>
-      <script src="js1.2.js">;</script>
+      <script src="js1.2.js"></script>
 </body>
 </html>
