--- a/Module1/assignment1.5/html1.5.html
+++ b/Module1/assignment1.5/html1.5.html
@@ -8,7 +8,7 @@
     <h1> leap year</h1>
     <label for="year">Enter the year:</label>
     <input type="text" id="year">
-    <button onclick="YearCheck()">Sort</button>
+    <button onclick="YearCheck()">Check</button>
     <div id="result"></div>
     <script src="js1.5.js"></script>
 </body>
